--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "wasdas",
-  "version": "0.1.1",
+  "name": "was-das",
+  "version": "0.1.0",
   "type": "module",
   "bin": "./was.mjs",
   "author": "huozhi",
